@@ -1,10 +1,12 @@
 Package: OpenML
 Title: Exploring Machine Learning Better, Together
-Description: 'OpenML.org' is an online machine learning platform where researchers can 
-    automatically share data, machine learning tasks and experiments and organize them 
-    online to work and collaborate more effectively.
-    We provide a R interface to the OpenML REST API in order to download and upload data 
-    sets, tasks, flows and runs, see <http://www.openml.org/guide> for more information.
+Description: 'OpenML.org' is an online machine learning platform where 
+    researchers can easily download and upload data sets, share machine learning 
+    tasks and experiments and organize them online to work and collaborate more 
+    effectively.
+    We provide an R interface to the OpenML REST API in order to download and 
+    upload data sets, tasks, flows and runs, see <http://www.openml.org/guide> 
+    for more information.
 Author: Giuseppe Casalicchio <giuseppe.casalicchio@stat.uni-muenchen.de>,
     Bernd Bischl <bernd_bischl@gmx.net>,
     Dominik Kirchhoff <dom.kirchhoff@gmail.com>,
@@ -17,7 +19,7 @@ Maintainer: Giuseppe Casalicchio <giuseppe.casalicchio@stat.uni-muenchen.de>
 License: BSD_2_clause + file LICENSE
 URL: https://github.com/openml/openml-r
 BugReports: https://github.com/openml/openml-r/issues
-Depends: R (>= 3.0.2), mlr (>= 2.9)
+Depends: R (>= 3.0.2), mlr (>= 2.10)
 Suggests: testthat, randomForest, rpart, RWeka, farff, mboost, knitr,
         rmarkdown, R.rsp
 Imports: backports (>= 1.0.3), BBmisc (>= 1.10), checkmate (>= 1.8.1),
@@ -25,10 +27,10 @@ Imports: backports (>= 1.0.3), BBmisc (>= 1.10), checkmate (>= 1.8.1),
         jsonlite, memoise (>= 1.0.0), stats, curl
 LazyData: yes
 ByteCompile: yes
-Version: 1.1
+Version: 1.2
 RoxygenNote: 5.0.1
 VignetteBuilder: R.rsp
 NeedsCompilation: no
-Packaged: 2016-11-23 09:41:57 UTC; Admin2
+Packaged: 2017-02-07 13:52:16 UTC; Admin2
 Repository: CRAN
-Date/Publication: 2016-11-23 12:06:34
+Date/Publication: 2017-02-07 18:07:25
