@@ -1,9 +1,9 @@
-040cb1093794038c0205c6b489400113 *DESCRIPTION
+fffeb3adbd72d99d87dcf8e6a848a4af *DESCRIPTION
 42114c6a0fa730db2631809c07d7a972 *LICENSE
 a44a974eab5403e2d3f9fee148b9df6d *NAMESPACE
-6b0d0ba45fde87b7830a5dabf0f2241b *NEWS
-2ea8a0148d44c66ed24eb2010e339e7c *R/OMLDataSetDescription_Class.R
-b5565cba261df93b5da161e59c2297db *R/OMLDataSet_Class.R
+9d67b35ecac867ea7bff8cec8e09ea52 *NEWS
+6c09f83b4c3d888b69c3b5754139f401 *R/OMLDataSetDescription_Class.R
+609a83124b83eed741e2114b062182a8 *R/OMLDataSet_Class.R
 6ce2d04bf45ac93f18dc1ef68b3a0513 *R/OMLEstimationProcedure_Class.R
 abeb785e243993709e6a311fd3d783ba *R/OMLFlow_Class.R
 2b75dd9bfd04ca051068a0c9f2b2340a *R/OMLIOData_Class.R
@@ -14,28 +14,28 @@ da7cb7b6867067b38e89e7bc611c1c07 *R/OMLRun_Class.R
 78362a4c05b40a8df02f0dc7cbd2e9e6 *R/OMLTask_Class.R
 ae9582682156aca482a88f71e2502106 *R/cache.R
 6805264026b1adfec57d7e111d4fdfe8 *R/config.R
-500b029030d8cbdc32c695a209cb90a2 *R/config_helpers.R
+e13679120dd9333e9caad268933bfd76 *R/config_helpers.R
 4f6873aaee6f5ef81282f88df15f6857 *R/convertMlrLearnerToOMLFlow.R
 d7c4a9587ead60f4b559cff6ae99c6f6 *R/convertMlrTaskToOMLDataSet.R
-684b6bbed62e536bac7c45df63ccaf6e *R/convertOMLDataSetToMlr.R
+222df4df363d8d397a74fc764cc0e0e9 *R/convertOMLDataSetToMlr.R
 d369aa51f03b5be72ec5a8ffe88b77c0 *R/convertOMLFlowToMlr.R
 5b2c182d492024a3cdf98ad9d290c008 *R/convertOMLMeasuresToMlr.R
-8a25e3a24cbd05c0e0f551acbd2d4a84 *R/convertOMLMlrRunToBMR.R
-d81c79cde9cb842b324a366bd3306576 *R/convertOMLRunToBMR.R
+bec378d41bcec7a46cd4d0afadeb4122 *R/convertOMLMlrRunToBMR.R
+dcaca594908d4593ebb1d5d422dda5f2 *R/convertOMLRunToBMR.R
 2147242d1c71f2111ea329fe58eba060 *R/convertOMLSplitsToMlr.R
 34156c375db59f0cd9d7e856ba5e974c *R/convertOMLTaskToMlr.R
 892212cc32e07d8d0d92e025a93140d1 *R/deleteOMLObject.R
 2db12d03a10f1f9b5062d05624d009d5 *R/download.R
-32bf9cb6021bb5863c090683d07ab997 *R/downloadOMLObject.R
+34c8834f45ffe789103992fe5134c989 *R/downloadOMLObject.R
 e2c737ad67db1e945a1fc5f228eeb182 *R/getCachedOMLDataSetStatus.R
 d167623dd1e5a472a97690845efd3d31 *R/getOMLConfig.R
-4a9e236373a2806a7f650f02fd158009 *R/getOMLDataSet.R
+84bbd2c86a3494e75f7b70427a0d76eb *R/getOMLDataSet.R
 e709b80cd1cde9282571c37ca6c3c9c8 *R/getOMLDataSetQualities.R
 470d1f57319dea209585e92a79c030db *R/getOMLFlow.R
 28199c193af070442d3684c14bd4a651 *R/getOMLRun.R
 d810c70d02a468e4c2bee2d2d75dba3d *R/getOMLTask.R
 9eef06f43a96265dabf9733c8b99b095 *R/helper_misc.R
-bd7f6c44f22b7130d3eca3d7e9215a53 *R/helpers.R
+3d5c5c9a41b6ec1c024bbb0b9f79ac41 *R/helpers.R
 0aaeac7ff5d7079abceae9bce12ef05d *R/listOMLDataSetQualities.R
 769aad33ba89314bb4790225ac0fb558 *R/listOMLDataSets.R
 181b7b7d1a1acf7a8d7dac6a345c9119 *R/listOMLEstimationProcedures.R
@@ -53,16 +53,16 @@ af86b1f89ab64bad035b6161a2d0270a *R/runTaskMlr.R
 a95f4d1b4ee4c451c5b65530be0d9056 *R/saveOMLConfig.R
 4276ddcb91285974eb37955913bb4fca *R/setOMLConfig.R
 9372a7dcf981b5c17616838bb136bcc8 *R/tagOMLObject.R
-201fc4fcd07018d2e19196694599be41 *R/uploadOMLDataSet.R
+c669137cc3424f00e02364bfa204b5a5 *R/uploadOMLDataSet.R
 9fee7b9a965626eb14b244c6ae4d2624 *R/uploadOMLFlow.R
 1151cfccd12115df0823eda3fadb0841 *R/uploadOMLRun.R
-d0249c92d692a994382f6fe782b43b09 *R/writeOMLDataSetXML.R
+56d8c9f30c16e3df7900595b1447b83a *R/writeOMLDataSetXML.R
 415a49f02243b5d82f69e1c17c7c7d18 *R/writeOMLFlowXML.R
 37e41687b8bc73a80accc110d20179f5 *R/writeOMLRunXML.R
 1cd7ae635474bf583898ac7b3cf6ea52 *R/xml_helpers.R
 7da89f0990a7be612f853d5203183b67 *R/zzz.R
 e18fe78943b40c9f1cda735548df6e0d *build/vignette.rds
-977a8d9250831f4014b6a75bc41c1f0b *inst/doc/OpenML.pdf
+446ec1e108fb52c7356b18c1d149f832 *inst/doc/OpenML.pdf
 377a78c03960e43d0581577d586a83b0 *inst/doc/OpenML.pdf.asis
 e62e59cf9810ae90f2a7bf7691a4b5f2 *inst/examples/clearOMLCache.R
 997a5bd1a18ca4da61221aa3c8a53d4b *inst/examples/convertOMLDataSetToMlr.R
@@ -86,14 +86,14 @@ b98b664b06aed085574b9aaec4896425 *inst/examples/listOMLTasks.R
 1a634c25e41e5df0c02d2f7aa1282ead *inst/examples/loadOMLConfig.R
 448c9a452307824690d06a33c79359e8 *inst/examples/makeOMLDataSet.R
 89aaa2d023448a3eb300e318e6ae7655 *inst/examples/runTaskMlr.R
-f9d00f38da2726c5e31758e5ebe00c4a *man/OMLDataSet.Rd
+bc87a2583ea1b7a2399023b0ee7f064c *man/OMLDataSet.Rd
 fd86ea2cf4c6f7669bddef5cbd4b3737 *man/OMLDataSetDescription.Rd
 12e07f6d5bce2489b9d17d249a424525 *man/OMLIOData.Rd
 10e3b7cb4c5022a090e50dafe42fda37 *man/clearOMLCache.Rd
 32a9cea82d478b897def46f44eb68e8e *man/configuration.Rd
 851947cccc2f02718c5c4a703cc45929 *man/convertMlrLearnerToOMLFlow.Rd
 0f818d0e57454543a7bd881068b278b5 *man/convertMlrTaskToOMLDataSet.Rd
-21603d760f3a6c0ed1570205edea68b0 *man/convertOMLDataSetToMlr.Rd
+30143b34a50760fa21a3eda01b17ef35 *man/convertOMLDataSetToMlr.Rd
 f40bd9727d49aa469a290f878aaca145 *man/convertOMLFlowToMlr.Rd
 f221d021c3cb12b062650f81a08c027e *man/convertOMLMlrRunToBMR.Rd
 e2dcec2080e212ae2fd8f63e0f76ae7e *man/convertOMLRunToBMR.Rd
